--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,398 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+}
+.App h1 {
+  color: #e9ba00;
+  font-size: 95px;
+}
+.App p {
+  margin-top: 15px;
+}
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+input {
+  padding: 10px;
+  width: 10%;
+  margin-top: 30px;
+  background: rgb(243, 243, 243);
+  border-radius: 5px;
+  font-size: 20px;
+  border: none;
+}
+input:hover {
+  border: 1px solid rgb(187, 187, 187);
+}
+.menu h2 {
+  margin-top: 80px;
+}
+.menu select {
+  margin-top: 15px;
+  padding: 5px 30px;
+}
+.Select-menu-outer {
+  top: auto;
+  bottom: 100%;
+}
+.menu button {
+  margin-top: 45px;
+  padding: 12px 50px;
+  color: #e9ba00;
+  border-radius: 20px;
+  transition-duration: 0.2s;
+  border: 1.5px solid #e9ba00;
+  background-color: white;
+  font-size: 20px;
+}
+.menu button:hover {
+  color: white;
+  background-color: #e9ba00;
+}
+.quiz h1 {
+  margin-top: 80px;
+  padding: 0px 5px;
+  font-size: 40px;
+}
+.options {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.options button {
+  color: #e9ba00;
+  border: none;
+  font-size: 20px;
+  background-color: white;
+  margin: 1px 10px;
+  padding: 5px 15px;
+  border-radius: 20px;
+  transition-duration: 0.2s;
+  background-color: none;
+  size: 20px;
+}
+.options button:hover {
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.4);
+}
+#next {
+  margin-top: 50px;
+  padding: 12px 50px;
+  color: #e9ba00;
+  border-radius: 20px;
+  transition-duration: 0.2s;
+  border: 1.5px solid #e9ba00;
+  background-color: white;
+  font-size: 20px;
+}
+#next:hover {
+  color: white;
+  background-color: #e9ba00;
+}
+#finish {
+  margin-top: 50px;
+  padding: 12px 50px;
+  color: #e9ba00;
+  border-radius: 20px;
+  transition-duration: 0.2s;
+  border: 1.5px solid #e9ba00;
+  background-color: white;
+  font-size: 20px;
+}
+#finish:hover {
+  color: white;
+  background-color: #e9ba00;
+}
+.share {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  border: 1.5px solid #e9ba00;
+  margin-top: 100px;
+}
+.share h3 {
+  padding-top: 100px;
+  color: #e9ba00;
+  font-size: 25px;
+}
+.sharebtns {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 80px;
+  padding-bottom: 100px;
+  width: 100%;
+}
+.sharebtns button {
+  background: none;
+  border: none;
+  color: #e9ba00;
+  font-size: 15px;
+}
+.Navbar {
+  background-color: white;
+  width: 100%;
+  /* height: 80px; */
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+}
+.Navbar .leftSide {
+  flex: 30%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+.Navbar .rightSide {
+  flex: 70%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+.Navbar .leftSide .links {
+  max-width: auto;
+}
+.Navbar .leftSide .links a {
+  text-decoration: none;
+  font-size: 18px;
+  color: white;
+  margin-left: 25px;
+}
+.Navbar .rightSide .buttons {
+  margin-right: 25px;
+  display: flex;
+  align-items: center;
+  /* flex-direction: column; */
+}
+
+.navbtns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* flex-direction: column; */
+}
+
+.Navbar .rightSide .buttons button {
+  margin: 1px 10px;
+  padding: 5px 15px;
+  border-radius: 20px;
+  transition-duration: 0.2s;
+  background-color: none;
+}
+
+select:hover {
+  outline: none;
+  border: 1px solid #bbbbbb;
+}
+select option {
+  color: black;
+}
+input [type="text"] {
+  width: 10px;
+  padding: 2px;
+  margin-bottom: 100px;
+}
+.dropdown {
+  position: relative;
+  max-width: auto;
+}
+.login {
+  color: #e9ba00;
+  border: none;
+  font-size: 15px;
+  background-color: white;
+}
+.login:hover {
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+.signup {
+  border: 1.5px solid #e9ba00;
+  color: #e9ba00;
+  background-color: white;
+  font-size: 15px;
+}
+.signup:hover {
+  color: white;
+  background-color: #e9ba00;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.logoimg {
+  width: 120px;
+  margin-top: 20px;
+  margin-left: 0px;
+}
+.quiz {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  /* margin-top: 50px; */
+}
+.stepper {
+  /* margin-top: 50px; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 50px 300px 0px 300px;
+}
+.EndScreen {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.EndScreen h1 {
+  font-size: 40px;
+  margin-top: 60px;
+}
+.EndScreen button {
+  margin-top: 50px;
+  padding: 12px 50px;
+  color: #e9ba00;
+  border-radius: 20px;
+  transition-duration: 0.2s;
+  border: 1.5px solid #e9ba00;
+  background-color: white;
+  font-size: 20px;
+}
+.EndScreen button:hover {
+  color: white;
+  background-color: #e9ba00;
+}
+.about {
+  display: grid;
+  grid-template-columns: repeat(2, 10fr);
+  column-gap: 150px;
+  justify-content: center;
+  margin-top: 300px;
+  background: #e9ba00;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.about h3 {
+  padding-top: 50px;
+  font-size: 25px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.about p {
+  padding-top: 25px;
+  padding-bottom: 70px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  margin-top: 200px;
+}
+.footerlinks {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-decoration: none;
+  width: 100%;
+  margin-top: 70px;
+}
+.footerlinks a {
+  color: #c49c00;
+  text-decoration: none;
+}
+.lang {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: #e9ba00;
+  width: 100%;
+  margin-top: 12px;
+}
+.lang button {
+  padding: 6px 4px;
+  background: none;
+  border: none;
+  color: white;
+}
+.quiz h1,
+h2 {
+  color: #e9ba00;
+}
+.quiz p {
+  color: #a78500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 700px) {
+  .App h1 {
+    font-size: 60px;
   }
-  to {
-    transform: rotate(360deg);
+  input {
+    width: 40%;
+  }
+  .EndScreen h1 {
+    font-size: 30px;
+    margin-top: 60px;
+  }
+  .quiz h1 {
+    font-size: 25px;
+  }
+  .share h3 {
+    padding: 0px 9px;
+  }
+  .sharebtns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .sharebtns button {
+    font-size: 20px;
+    padding: 10px 0px;
+  }
+  .about {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .footerlinks {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .footerlinks a {
+    padding: 6px 0px;
+  }
+  .lang {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 }
